[package]
name         = "owner-signal-agent"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/owner-signal-agent"
description  = "OwnerSignal contract for privileged agent policy commands."
publish      = false

[lib]
name = "owner_signal_agent"
path = "src/lib.rs"

[dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-sema = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
